2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562544 – g_key_file_get_string and g_key_file_get_value
	documentation does not explain the difference

	* glib/gkeyfile.c (g_key_file_get_string): Explain the difference
	to g_key_file_get_value(). Pointed out by Mart Raudsepp.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	* glib/gkeyfile.c: Refer to @locale parameters as locale identifier
	in docs.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 557603 – carbon check output misplaced

	* configure.in: Call AC_PROG_CPP early to avoid it messing up
	carbon check output. Fix proposed by Christian Persch

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 559110 – Do not include libintl.h after glibintl.h

	* glib/glibintl.h: Define bind_textdomain_codeset in the DISABLE_NLS
	branch. Patch by Peter Kjellerstedt.

	* glib/gutil.c: Don't include libintl.h directly.

2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562378 – callback return value not respected for callback option
	with no arg

	* glib/goption.c (parse_long_option): Return the parse_arg return
	value even for no-arg callbacks. Patch by Christian Persch

	* glib/tests/option-context.c: Add a test for a callback which
	returns FALSE.

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 559413 – g_option_group_set_error_hook docs buglet

	* glib/goption.c: Doc fix.

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 560568 – gkeyfile docs buglet

	* glib/gkeyfile.c: Clarify the docs.

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 560569 – gkeyfile doesn't use the set list_separator in some cases

	* glib/gkeyfile.c: (g_key_file_get_locale_string_list),
	(g_key_file_set_locale_string_list), (g_key_file_set_integer_list),
	(g_key_file_set_double_list): Use the key file's list separator character,
	not the default one.

	* glib/tests/keyfile.c: (test_lists), (test_reload_idempotency): Test
	this.

2008-11-21  Christophe Fergeau <teuf@gnome.org>
